--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -65,7 +65,7 @@
                   class="nav-tabs nav-list nav nav-pills mb-3"
                   role="tablist"
                 >
-                  <li class="nav-item item nav-text nav-mark " role="presentation">
+                    <li class="nav-item item nav-text nav-mark " role="presentation">
                     <button
                     class="nav-link active"
                     data-bs-toggle="pill"
@@ -75,10 +75,10 @@
                     aria-controls="pills-contact"
                     aria-selected="false"
                     >All Articles
-                    </button>
-                    <img class=shape src="./img/header__Shape.png" alt="icon shape">
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
+                        </button>
+                        <img class=shape src="./img/header__Shape.png" alt="icon shape">
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
                       data-bs-toggle="pill"
@@ -88,10 +88,10 @@
                       aria-controls="pills-contact"
                       aria-selected="false"
                     >
-                    Sales
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
+                            Sales
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
                       data-bs-toggle="pill"
@@ -101,10 +101,10 @@
                       aria-controls="pills-contact"
                       aria-selected="false"
                     >
-                    Marketing
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
+                            Marketing
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
                       data-bs-toggle="pill"
@@ -114,10 +114,10 @@
                       aria-controls="pills-contact"
                       aria-selected="false"
                     >
-                    Service
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
+                            Service
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
                       data-bs-toggle="pill"
@@ -127,10 +127,10 @@
                       aria-controls="pills-contact"
                       aria-selected="false"
                     >
-                    Product
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
+                            Product
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
                       data-bs-toggle="pill"
@@ -140,11 +140,11 @@
                       aria-controls="pills-contact"
                       aria-selected="false"
                     >
-                    New
-                    </button>
-                  </li>
+                            New
+                        </button>
+                    </li>
                 </ul>
-              </div>
+            </div>
         </div>
     </header>
     <!-------------------
@@ -192,8 +192,15 @@
         <div class="container">
             <div class="product-content">
                 <div class="card card-img">
-                    <h5 class="card-header">News</h5>
-                    <img src="./img/product__item1.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <h5 class="card-header">New</h5>
+                    <picture>
+                        <!-- mobile -->
+                        <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
+                        <!-- desktop -->
+                        <source media="(min-width:768px)" srcset="./img/product_img1-1.5x.jpg ">
+                        <img src="./img/product_img1-1.5x.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    </picture>
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -206,7 +213,14 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item2.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <picture>
+                        <!-- mobile -->
+                        <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
+                        <!-- desktop -->
+                        <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
+                        <img src="./img/product_img2-1.5.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    </picture>
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -219,7 +233,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -232,7 +247,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -245,7 +261,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
+                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -258,7 +275,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
+                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -270,8 +288,8 @@
                 </div>
 
             </div>
-            </div>
-            </section>
+        </div>
+    </section>
     <!-------------------
      Product end
     --------------------->
@@ -448,20 +466,20 @@
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
                 </a>
-                    <p class="font--small">
-                        We built an elegant solution.<br>
-                        Our team created a fully integrated sales<br>
-                        and marketing solution for SMBs</p>
+                <p class="font--small">
+                    We built an elegant solution.<br>
+                    Our team created a fully integrated sales<br>
+                    and marketing solution for SMBs</p>
                 <ul class="media menu__list">
-                        <li>
+                    <li>
                             <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
-                        </li>
-                        <li>
+                    </li>
+                    <li>
                             <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
-                        </li>
-                        <li>
+                    </li>
+                    <li>
                             <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
-                    </ul>
+                </ul>
 
             </div>
             <div class="footer__content-right">
@@ -524,9 +542,9 @@
                 <div class="rule__locale">
                         <img src="./img/Shape.png" alt=" this is the icon for the change language button"
                             class="btn__icon">
-                        <select class="btn--flex" name="language" id="language">
-                            <option value="volvo">English</option>
-                            <option value="saab">Vietnamese</option>
+                    <select class="btn--flex" name="language" id="language">
+                        <option value="volvo">English</option>
+                        <option value="saab">Vietnamese</option>
                     </select>
                 </div>
             </div>
